New upper limit plots + ice plots

--- a/SimulatedData.ipynb
+++ b/SimulatedData.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T16:50:28.477682Z",
-     "start_time": "2025-06-03T16:50:26.765506Z"
+     "end_time": "2025-06-08T22:54:11.654019Z",
+     "start_time": "2025-06-08T22:54:10.047591Z"
     }
    },
    "cell_type": "code",
@@ -25,8 +25,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T16:50:28.497416Z",
-     "start_time": "2025-06-03T16:50:28.489806Z"
+     "end_time": "2025-06-08T22:54:12.047871Z",
+     "start_time": "2025-06-08T22:54:12.041025Z"
     }
    },
    "cell_type": "code",
@@ -113,8 +113,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T16:50:29.195235Z",
-     "start_time": "2025-06-03T16:50:28.506772Z"
+     "end_time": "2025-06-08T22:54:12.687502Z",
+     "start_time": "2025-06-08T22:54:12.083539Z"
     }
    },
    "cell_type": "code",
@@ -1055,8 +1055,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T19:23:37.829807Z",
-     "start_time": "2025-06-02T19:23:37.129759Z"
+     "end_time": "2025-06-08T22:57:27.462047Z",
+     "start_time": "2025-06-08T22:57:27.385375Z"
     }
    },
    "cell_type": "code",
@@ -1074,12 +1074,12 @@
     "\n",
     "\n",
     "wav = np.linspace(4.9, 27.5, 10000)\n",
-    "flx = np.ones(len(wav)) / 10000\n",
+    "flx = np.ones(len(wav)) / 20000\n",
     "threshold = total_flux(wav, flx)\n",
     "species = ['C2H2', 'CH4', 'CO', 'CO2', 'H2O', 'HCN', 'NH3', 'NO', 'OH']\n",
     "for i, row in df.iterrows():\n",
-    "    # if i != 12:\n",
-    "    #     continue\n",
+    "    if (i != 12) and (i != 16):\n",
+    "        continue\n",
     "    print(row['Model Name'], '------------')\n",
     "    for target in species:\n",
     "        real_wl = row[f'FLiTs {target} Wavelength']\n",
@@ -1088,11 +1088,11 @@
     "        # print(f'{target}: {flux:.2e}, {threshold:.2e}')\n",
     "        if flux >= threshold:\n",
     "            print(target + ' total spectrum: ', True)\n",
-    "        # plt.title(target)\n",
-    "        # plt.plot(real_wl, real_flux)\n",
-    "        # plt.ylim(0, 0.1)\n",
-    "        # plt.xlim(4.9, 27.5)\n",
-    "        # plt.show()"
+    "            # plt.title(target)\n",
+    "            # plt.plot(real_wl, real_flux)\n",
+    "            # plt.ylim(0, 0.1)\n",
+    "            # plt.xlim(4.9, 27.5)\n",
+    "            # plt.show()"
    ],
    "id": "5b6f7b01db97904b",
    "outputs": [
@@ -1100,144 +1100,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C_-0.5_O_-0.5_CO_0.45 ------------\n",
-      "CO total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
-      "C_-0.5_O_-0.25_CO_0.2570 ------------\n",
-      "CO total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
-      "C_-0.5_O_0.0_CO_0.145 ------------\n",
-      "CO total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
-      "C_-0.5_O_0.25_CO_0.0813 ------------\n",
-      "CO total spectrum:  True\n",
-      "CO2 total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
-      "C_-0.5_O_0.5_CO_0.045 ------------\n",
-      "CO total spectrum:  True\n",
-      "CO2 total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
-      "C_-0.25_O_-0.5_CO_0.813 ------------\n",
-      "CO total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
-      "C_-0.25_O_-0.25_CO_0.45 ------------\n",
-      "CO total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
-      "C_-0.25_O_0.0_CO_0.257 ------------\n",
-      "CO total spectrum:  True\n",
-      "CO2 total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
-      "C_-0.25_O_0.25_CO_0.145 ------------\n",
-      "CO total spectrum:  True\n",
-      "CO2 total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
-      "C_-0.25_O_0.5_CO_0.0813 ------------\n",
-      "CO total spectrum:  True\n",
-      "CO2 total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
-      "C_0.0_O_-0.5_CO_1.445 ------------\n",
-      "C2H2 total spectrum:  True\n",
-      "CO total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "HCN total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "C_0.0_O_-0.25_CO_0.813 ------------\n",
-      "CO total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
       "C_0.0_O_0.0_CO_0.45 ------------\n",
       "CO total spectrum:  True\n",
       "CO2 total spectrum:  True\n",
       "H2O total spectrum:  True\n",
       "NO total spectrum:  True\n",
       "OH total spectrum:  True\n",
-      "C_0.0_O_0.25_CO_0.257 ------------\n",
-      "CO total spectrum:  True\n",
-      "CO2 total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
-      "C_0.0_O_0.5_CO_0.145 ------------\n",
-      "CO total spectrum:  True\n",
-      "CO2 total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
-      "C_0.25_O_-0.5_CO_2.570 ------------\n",
-      "C2H2 total spectrum:  True\n",
-      "CO total spectrum:  True\n",
-      "HCN total spectrum:  True\n",
       "C_0.25_O_-0.25_CO_1.445 ------------\n",
       "C2H2 total spectrum:  True\n",
       "CO total spectrum:  True\n",
+      "H2O total spectrum:  True\n",
       "HCN total spectrum:  True\n",
-      "C_0.25_O_0.0_CO_0.813 ------------\n",
-      "CO total spectrum:  True\n",
-      "CO2 total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
-      "C_0.25_O_0.25_CO_0.45 ------------\n",
-      "CO total spectrum:  True\n",
-      "CO2 total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
-      "C_0.25_O_0.5_CO_0.2570 ------------\n",
-      "CO total spectrum:  True\n",
-      "CO2 total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
-      "C_0.5_O_-0.5_CO_4.57 ------------\n",
-      "C2H2 total spectrum:  True\n",
-      "CO total spectrum:  True\n",
-      "HCN total spectrum:  True\n",
-      "C_0.5_O_-0.25_CO_2.570 ------------\n",
-      "C2H2 total spectrum:  True\n",
-      "CO total spectrum:  True\n",
-      "HCN total spectrum:  True\n",
-      "C_0.5_O_0.0_CO_1.445 ------------\n",
-      "C2H2 total spectrum:  True\n",
-      "CO total spectrum:  True\n",
-      "HCN total spectrum:  True\n",
-      "C_0.5_O_0.25_CO_0.813 ------------\n",
-      "CO total spectrum:  True\n",
-      "CO2 total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n",
-      "C_0.5_O_0.5_CO_0.45 ------------\n",
-      "CO total spectrum:  True\n",
-      "CO2 total spectrum:  True\n",
-      "H2O total spectrum:  True\n",
-      "NO total spectrum:  True\n",
-      "OH total spectrum:  True\n"
+      "NO total spectrum:  True\n"
      ]
     }
    ],
-   "execution_count": 35
+   "execution_count": 9
   }
  ],
  "metadata": {
